--- a/src/main.scss
+++ b/src/main.scss
@@ -1,12 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    vertical-align: baseline;
-    border: 0;
-    box-sizing: border-box;
-    text-align: left;
-    vertical-align: baseline;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-        "Helvetica Neue", sans-serif;
-    font-size: 12px;
-}
+@import "./scss/doms.scss";
+@import "./scss/classes.scss";
+@import "./scss/named.scss";
