--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,1 +1,15 @@
-$main-background: rgb(32, 32, 32);
+$background-dark: rgb(16, 16, 16);
+$background-normal: rgb(32, 32, 32);
+$background-light: rgb(64, 64, 64);
+
+$color-selected: rgb(0, 128, 255);
+
+$font-color-normal: rgb(232, 232, 232);
+$font-color-dark: rgb(200, 200, 200);
+$font-color-fine: rgb(128, 128, 128);
+
+$font-size-normal: 22px;
+$font-size-small: 16px;
+$font-size-fine: 12px;
+
+$border-normal: rgb(72, 72, 72);
